# multichannel-document-intelligence-platform

./: .env.example  README.md  docker-compose.yml  package-lock.json  package.json  setup_github.sh
.github/workflows/: ci.yml
apps/web/: package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/documents/: route.integration.test.ts  route.test.ts  route.ts
apps/web/src/app/api/documents/[id]/: route.ts
apps/web/src/lib/: config.test.ts  config.ts  documents.test.ts  documents.ts  queue.ts
infra/db/: init.sql
infra/policies/: extraction-profile.claims.yml
scripts/: demo_flow.sh
services/engine/: Dockerfile  pyproject.toml
services/engine/document_engine/: __init__.py  config.py  db.py  extractor.py  main.py  mapper.py  worker.py
services/engine/tests/: test_extractor.py  test_mapper.py  test_worker.py
